# growthbook-synthetic-data

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/verticals/: ai.yaml  b2b.yaml  ecom.yaml  fintech.yaml  saas.yaml
docs/: adding-a-vertical.md  demo-runbook.md  phase-2.md
phase0/: README.md  __init__.py  capture_datasource.py  config.py  generate.py  provision.py  reset.py
src/gbsynth/: __init__.py  build.py  cleanup.py  cli.py  dataset.py  refresh.py  reset.py  spec.py
src/gbsynth/core/: __init__.py  experiments.py  population.py  sessions.py  stories.py
src/gbsynth/load/: __init__.py  clickhouse.py  postgres.py
src/gbsynth/provision/: __init__.py  bootstrap.py  client.py  config.py  crypto.py  experiments.py  features.py  metrics.py  provisioner.py  verify.py  workspace.py
src/gbsynth/schemas/: __init__.py  common.py  segment.py
tests/: test_clickhouse.py  test_crypto.py  test_stories.py
