[project]
name = "gbsynth"
version = "0.0.0"
description = "Synthetic GrowthBook demo data generator (Phase 0 validation spike)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pytest>=8.0",
]

[tool.uv]
# Scripts-only spike — nothing to build/install. Phase 1 graduates proven code into
# an installable src/gbsynth package and flips this.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"
