[project]
name = "gbsynth"
version = "0.1.0"
description = "Synthetic GrowthBook demo data generator"
# Python 3.11: gbstats caps pandas<2 / numpy<2, and those have no cp312 wheels.
requires-python = ">=3.11,<3.12"
dependencies = [
    # gbstats 0.8.0 caps numpy<2 and pandas<2; pin to match (PCG64 streams are
    # version-stable, so generated data is unaffected).
    "numpy>=1.26,<2",
    "gbstats>=0.8",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pydantic>=2.5.3",
    "pyyaml>=6.0",
    "pycryptodome>=3.23.0",
    "pymongo>=4.17.0",
]

[project.scripts]
gbsynth = "gbsynth.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gbsynth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
